--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,7 @@
 
 body {
   font-family: var(--font-sans);
+  font-size: 17px;
   color: hsl(var(--color-ink) / 1);
   background-color: hsl(var(--color-bg) / 1);
 }
